--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -1,6 +1,7 @@
 <div class="searchresult">
-    <a href="{{link}}">
-        <h2>{{title}}</h2>
-        <p>{{description}}</p>
+    <a class="result" href="{{link}}">
+        <h2 class="resultTitle">{{title}}</h2>
+        <p class="resultLink">{{link}}</p>
+        <p class="resultDescription">{{description}}</p>
     </a>
 </div>
