--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'style/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'style/style.css') }}">
     <title>JdM's Search</title>
 </head>
 <body>
@@ -13,5 +13,16 @@
         <input placeholder="What do you want to find ?" type="text" name="query">
         <button type="submit">GO</button>
     </form>
+    <div class="results">
+        {% for result in results %}
+            <div class="searchresult">
+                <a class="resulta" href="{{result['link']}}">
+                    <h2 class="resultTitle">{{result['title']}}</h2>
+                    <p class="resultLink">{{result['link']}}</p>
+                    <p class="resultDescription">{{result['description']}}</p>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
