--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -1,5 +1,5 @@
 <div class="searchresult">
-    <a class="result" href="{{link}}">
+    <a class="resulta" href="{{link}}">
         <h2 class="resultTitle">{{title}}</h2>
         <p class="resultLink">{{link}}</p>
         <p class="resultDescription">{{description}}</p>
