--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,82 +1,246 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+* {
+
+    margin: 0;
+    border: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+:root {
+
+    --text-color: #E8AA42;
+    --content-color: #F8F1F1;
+    --hover-color: #E57C23;
+
+}
+
 body {
-    background-color: rgb(54, 54, 54);
-    color: rgb(255, 255, 255);
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    
+    background-color: #025464;
 
 }
 
-.results {
-    padding: 0 3vw;
+.main {
+
+    margin-top: 50px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+
 }
 
-.homeA{
+/*Search style*/
+
+.home-link {
+
     text-decoration: none;
-    color: rgb(255, 255, 255);
+   
 }
 
-.searchInput{
-    width: 50%;
-    height: 45px;
-    border-radius: 10px;
-    background-color: #4d4d4d;
-    border-style: solid;
-    border-color: rgb(255, 255, 255);
-    color: aliceblue;
-    font-size: large;
+.main-title {
+
+    text-align: center;
+    color: var(--text-color);
+
+}
+
+.searchForm{
+
+    margin-top: 20px;
+    margin-bottom: 50px;
+    display: flex;
+
+}
+
+.searchInput {
+
+    width: 720px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 15px;
+    border: 3px solid var(--text-color);
+    color: black;
+    background-color: var(--content-color);
+    transition: 0.3s ease-in-out;
+    
 }
 
 .searchButton{
-    height: 45px;
+
+    margin-left: 10px;
+    width: 80px;
+    height: 55px;
+    border: 3px solid var(--text-color);
+    border-radius: 15px;
     background-color: rgb(255, 255, 255);
-    margin-left: 20px;
-    border-radius: 10px;
-    transition: transform 0.5s;
+    transition: 0.3s ease-in-out;
 
 }
 
 .searchButton:hover{
-    background-color: rgb(141, 141, 141);
-    transform: scale(1.1);
+    
+    border-color: var(--hover-color);
+    color: white;    
+    background: transparent;
 
 }
 
-input:focus {
-    outline:none;
+.searchInput:focus, .searchInput:hover {
+
+    border-color: #E57C23;
+    outline: none;
+    color: white;
+    background: transparent;
+ 
 }
 
-.searchForm{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 50px;
-}
+/*Result style*/
 
 .searchresult {
-    max-width: 80rem;
-    background-color: #4d4d4d;
-    border-radius: 50px;
-    text-align: center;
+        
+    margin: 10px;
+    border: 3px solid var(--text-color);
     padding: 5px;
-    margin-bottom: 1em;
-    transition: transform 0.5s;
+    height: 110px;
+    width: 800px;
+    border-radius: 30px;
+    text-align: center;
+    color: black;
+    background: var(--content-color);
+    transition: 0.3s ease-in-out;
 }
 
-.resultA {
+.result-link {
     color: aliceblue;
     text-decoration: none;
 }
 
 .searchresult:hover{
-    transform: scale(1.03);
+
+    border-color: var(--hover-color);
+    transform: scale(1.02);
+
 }
 
-@media screen and (max-width: 768px) {
-    .searchresult {
-        max-width: 90vw;
+/*Responsive for small screens*/
+
+@media screen and (max-width: 800px) {
+
+    .searchForm {
+
+        margin-bottom: 30px;
+
     }
+
+    .searchInput {
+
+        margin-left: 10px;
+        width: 400px;
+        height: 30px;
+
+    }
+
+    .searchButton {
+
+        width: 60px;
+        height: 47px;
+
+
+    }
+
+    .searchresult {
+
+        width: 470px;
+
+    }
+
+    .resultTitle {
+
+        margin-top: 10px;
+        font-size: 15px;
+
+    }
+
+    .resultLink, .resultDescription {
+
+        font-size: 10px;
+
+    }
+
+    .searchInput:hover, .searchInput:focus, .searchButton:hover, .searchresult:hover {
+
+        border-color: var(--text-color);
+        color: black;
+        background: var(--content-color);
+        transform: scale(1.0);
+
+    }
+
+}
+
+@media screen and (max-width: 510px) {
+
+    .searchInput {
+
+        width: 250px;
+
+    }
+
+    .searchButton {
+
+
+        width: 50px;
+        font-size: 10px;
+
+    }
+
+    .searchresult {
+
+        width: 310px;
+
+    }
+
+    .resultTitle {
+
+        font-size: 12px;
+        margin-bottom: 10px;
+
+
+    }
+
+    .resultLink, .resultDescription {
+
+        font-size: 8px;
+
+    }
+
+}
+
+@media screen and (max-width: 360px) {
+
+    .searchInput {
+
+        width: 200px;
+        height: 25px;
+
+    }
+
+    .searchButton {
+
+        margin-left: 7px;
+        width: 40px;
+        height: 42px;
+        font-size: 8px;
+
+    }
+
+    .searchresult {
+
+        width: 247px;
+
+    }
+
 }
