lang selector css style

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <form method="get" action="/search/" class="searchForm">
             <input placeholder="What do you want to find ?" value="{{query}}" class="searchInput" type="text" name="query">
             <button class="searchButton" type="submit">Search</button>
-            <select name="lang" id="lang">
+            <select class="langSelect" name="lang" id="lang">
                 {% for lang in langCodes.keys() %}
                     <option value="{{lang}}">{{langCodes[lang]["native"]}}</option>
                 {% endfor %}
