add github link and image

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <div class="all">
+        <header>
+            <a target="_blank" href="https://github.com/judemont/jdm-search">
+                <img src="{{ url_for('static', filename='images/github.png') }}" class="githubImg" width="50" height="50" alt="GitHub">
+            </a>
+        </header>
     <div class="main">
         <a class="home-link" href="/">
             <h1 class="main-title">JdM's search</h1>
