--- a/static/style/style.css
+++ b/static/style/style.css
@@ -117,7 +117,14 @@ body {
     text-decoration: none;
 }
 
-
+.githubImg{
+    margin-top: 15px;
+    margin-left: 15px;
+    transition: transform 0.5s;
+}
+.githubImg:hover{
+    transform: scale(1.3);
+}
 
 /*Responsive for small screens*/
 
