--- a/static/style/style.css
+++ b/static/style/style.css
@@ -12,6 +12,7 @@
 :root {
 
     --text-color: #E8AA42;
+    --segondary-text-color: #000000;
     --content-color: #F8F1F1;
     --hover-color: #E57C23;
     --background-color: #025464
@@ -61,7 +62,7 @@ body {
     padding: 5px;
     border-radius: 15px;
     border: 3px solid var(--text-color);
-    color: black;
+    color: var(--segondary-text-color);
     background-color: var(--content-color);
     transition: 0.3s ease-in-out;
     
@@ -74,7 +75,7 @@ body {
     height: 55px;
     border: 3px solid var(--text-color);
     border-radius: 15px;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--content-color);
     transition: 0.3s ease-in-out;
 
 }
@@ -82,16 +83,16 @@ body {
 .searchButton:hover{
     
     border-color: var(--hover-color);
-    color: white;    
+    color: var(--content-color);    
     background: transparent;
 
 }
 
 .searchInput:focus, .searchInput:hover {
 
-    border-color: #E57C23;
+    border-color: var(--hover-color);
     outline: none;
-    color: white;
+    color: var(--content-color);
     background: transparent;
  
 }
@@ -107,24 +108,29 @@ body {
     width: 800px;
     border-radius: 30px;
     text-align: center;
-    color: black;
+    color: var(--segondary-text-color);
     background: var(--content-color);
     transition: 0.3s ease-in-out;
     overflow-y: hidden;
 }
 
 .result-link {
-    color: aliceblue;
+    color: var(--segondary-text-color);
     text-decoration: none;
 }
 
 .githubImg{
+
     margin-top: 15px;
     margin-left: 15px;
     transition: transform 0.5s;
+
 }
+
 .githubImg:hover{
+
     transform: scale(1.3);
+
 }
 
 /*Responsive for small screens*/
@@ -175,7 +181,7 @@ body {
     .searchInput:hover, .searchInput:focus, .searchButton:hover, .searchresult:hover {
 
         border-color: var(--text-color);
-        color: black;
+        color: var(--segondary-text-color);
         background: var(--content-color);
         transform: scale(1.0);
 
