--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <h1 class="main-title">Cosmos Search</h1>
         </a>
         <form method="get" action="/search/" class="searchForm">
-            <input placeholder="Search the Cosmos !" value="{{query}}" class="searchInput" type="text" name="query">
+            <input  autocomplete="off" placeholder="Search the Cosmos !" value="{{query}}" class="searchInput" type="text" name="query">
             <button class="searchButton" type="submit">Search</button>
         </form>
         <div class="results">
