--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
                     </div>
                 </a>
             {% endfor %}
+            <p class="description"><i>Privacy friendly simple Metasearch engine based on google results</i></p>
         </div>
     </div>
 </body>
