--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,10 @@
                     </div>
                 </a>
             {% endfor %}
+
+            {% if isSearch %}
+                <a href="{{next_url}}">NEXT</a>
+            {% endif %}
             <p class="description"><i>Privacy friendly simple Metasearch engine based on google results.</i></p>
         </div>
     </div>
