--- a/static/style/style.css
+++ b/static/style/style.css
@@ -135,6 +135,37 @@ body {
     text-decoration: none;
 }
 
+.next-page{
+
+    text-align: center;
+    margin-left: 100%;
+    width: 60px;
+    height: 47px;
+    border: 3px solid var(--text-color);
+    border-radius: 15px;
+    background-color: var(--content-color);
+    transition: 0.3s ease-in-out;
+
+}
+
+.next-page:hover{
+        
+    border-color: var(--hover-color);
+    color: var(--content-color);    
+    background: transparent;
+
+}
+
+
+.next-text{
+    padding-top: 10px;
+}
+
+.next-page-link{
+    text-decoration: none;
+    color: black;
+}
+
 .githubImg{
 
     margin-top: 15px;
@@ -180,7 +211,7 @@ body {
 
     }
 
-    .searchButton {
+    .searchButton, .next-page {
 
         width: 60px;
         height: 47px;
@@ -226,7 +257,7 @@ body {
 
     }
 
-    .searchButton {
+    .searchButton, .next-page {
 
 
         width: 50px;
@@ -265,7 +296,7 @@ body {
 
     }
 
-    .searchButton {
+    .searchButton, .next-page {
 
         margin-left: 7px;
         width: 40px;
