--- a/static/style/style.css
+++ b/static/style/style.css
@@ -115,6 +115,12 @@ body {
     overflow-y: hidden;
 }
 
+.listInfo{
+    color: azure;
+    margin-left: 30%;
+    margin-bottom: 15px;
+}
+
 .inforesult {
 
     margin: 10px;
