--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,18 @@
             </div>
         </a>
         {% endif %}
+
+        {% if not isSearch %}
+        <div class="listInfo">
+            <ul>
+                <li>No personalized results</li>
+                <li>No tracking</li>
+                <li>No ads</li>
+                <li>No partnership with google</li>
+            </ul>
+            <h3><b><i>Just search !</i></b></h3>
+        </div>
+        {% endif %}
         <p class="description"><i>Privacy friendly simple Metasearch engine based on google results.</i></p>
     </div>
 </body>
