--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'style/style.css') }}">
+    <link
+    rel="search"
+    type="application/opensearchdescription+xml"
+    title="Cosmos"
+    href="{{ url_for('static', filename='opensearch.xml') }}" />
+
     <title>Cosmos Search</title>
 </head>
 <body>
