--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
                 <li>No personalized results</li>
                 <li>No tracking</li>
                 <li>No ads</li>
-                <li>No partnership with google</li>
+                <li>No partnership with other search engines (like google)</li>
             </ul>
             <h3><b><i>Just search !</i></b></h3>
         </div>
