--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             <h3><b><i>Just search !</i></b></h3>
         </div>
         {% endif %}
-        <p class="description"><i>Privacy friendly simple Metasearch engine based on google results.</i></p>
+        <p class="description"><i>Privacy friendly beautiful metasearch engine..</i></p>
     </div>
 </body>
 </html>
