--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
     href="{{ url_for('static', filename='opensearch.xml') }}" />
 
     <title>Cosmos Search</title>
+    <meta name="description" content="Privacy friendly beautiful metasearch engine.">
+    <meta name="keywords" content="Search Engine, Metasearch engine, privacy, search, cosmos">
+    <meta name="author" content="Asterjdm">
 </head>
 <body>
     <div class="all">
