--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'style/style.css') }}">
+    <script defer src="{{ url_for('static', filename= 'script/preview.js') }}"></script>
     <link
     rel="search"
     type="application/opensearchdescription+xml"
@@ -50,7 +51,7 @@
                 {% endfor %}
             </div>
             {% for result in results %}
-                <a class="result-link" href="{{result['link']}}">
+                <a id="result-link" class="result-link" href="{{result['link']}}">
                     <div class="searchresult">
                             <h2 class="resultTitle">{{result['title']}}</h2>
                             <p class="resultLink">{{result['link']}}</p>
@@ -62,6 +63,7 @@
 
         </div>
         {% if isSearch %}
+        <iframe id="ifrm" class="ifrm" src="" width="500" height="500" frameborder="0"></iframe>
         <a class="next-page-link" href="{{next_url}}">
             <div class="next-page">
                 <p class="next-text" >Next</p>
