--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -81,7 +81,7 @@
             <h3><b><i>Just search !</i></b></h3>
         </div>
         {% endif %}
-        <p class="description"><i>Privacy friendly beautiful metasearch engine..</i></p>
+        <p class="description"><i>Privacy friendly, beautiful metasearch engine...</i></p>
     </div>
 </body>
 </html>
