--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,19 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../style/search.css">
-	<title>Cosmos - Search</title>
+	<title>{{query}} - CosmosSearch</title>
 </head>
 <body>
 	<div class="main">
 		<div class="main-search">
             <h1 class="main-title">cosmosearch</h1>    
-            <div class="inter">
-                <img src="../img/search.png" alt="Search icon" class="search-img">
-                    <input type="text" class="search-input" placeholder="Enter text to search">
-                <button class="send-button" onclick="window.location.href='./pages/search.html'"> 
-                    <img src="../img/send.png" alt="Send icon" class="send-img">
-                </button>
-            </div>
+            <form method="get" action="/search/" class="searchForm"> 
+                <div class="inter">
+                    <img src="{{ url_for('static', filename='images/search.png') }}" alt="Search icon" class="search-img">
+                        <input name="query" type="text" class="search-input" placeholder="Enter text to search">
+                    <button class="send-button" type="submit"> 
+                        <img src="{{ url_for('static', filename='images/send.png') }}" alt="Send icon" class="send-img">
+                    </button>
+                </div>
+            </form>
         </div>
         <div class="search">
 	        <div class="wikipedia">
