home button title

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -9,7 +9,9 @@
 <body>
 	<div class="main">
 		<div class="main-search">
-            <h1 class="main-title">cosmosearch</h1>    
+            <a href="/">
+                <h1 class="main-title">cosmosearch</h1>   
+            </a>
             <form method="get" action="/search/" class="searchForm"> 
                 <div class="inter">
                     <img src="{{ url_for('static', filename='images/search.png') }}" alt="Search icon" class="search-img">
