Fix responsive bugs

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -26,20 +26,24 @@
             {% for i in info %}
             <a href="{{i["url"]}}">
                 <div class="wikipedia">
-                    <div class="inter-container">
-                        <img src="{{i["image"]}}" alt="" width="200">
-                        <h1 class="wikipedia-title">{{i["title"]}}</h1>
+                    <div class="supra-content">
+                        <div class="inter-container">
+                            <img src="{{i["image"]}}" alt="" width="200" class="wiki-img">
+                            <h1 class="wikipedia-title">{{i["title"]}}</h1>
+                        </div>
+                        <p class="container-description">{{i["summary"]}}</p>
                     </div>
-                    <p class="container-description">{{i["summary"]}}</p>
                 </div>
             </a>
             {% endfor %}
             {% for result in results %}
             <a href="{{result['link']}}">
                 <div class="search-container">
-                    <h1 class="container-title">{{result['title']}}</h1>
-                    <p class="container-link">{{result['link']}}</p>
-                    <p class="container-description">{{result['description']}}</p>
+                    <div class="supra-content">
+                        <h1 class="container-title">{{result['title']}}</h1>
+                        <p class="container-link">{{result['link']}}</p>
+                        <p class="container-description">{{result['description']}}</p>
+                    </div>
                 </div>
             </a>
             {% endfor %}
