--- a/app/static/style/search.css
+++ b/app/static/style/search.css
@@ -12,21 +12,21 @@
     --content-color: #EEE2DE;
 }
 body {
-   background: var(--background-color); 
+   background: var(--background-color);
+   margin-left: 10%;
+    margin-right: 10%;
 }
 a {
     text-decoration: none;
 }
 .main-search {
-    margin: 20px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-top: 10px;
+    margin-left: -10px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 .main-title {
     text-transform: uppercase;
-    text-align: center;
     font-size: 35px;
     color: var(--content-color);
 }
@@ -34,8 +34,8 @@ a {
     margin-left: 10px;
     border: 2px solid var(--border-color);
     border-radius: 50px;
-    width: 100%;
     height: 50px;
+    width: 118%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,7 +45,7 @@ a {
     height: 20px;
 }
 .search-input {
-    width: 80%;
+    width: 75%;
     transition: 0.3s ease-in-out;
     height: 60%;
     background: var(--content-color);
@@ -70,10 +70,6 @@ a {
     height: 20px;
     cursor: pointer;
 }
-.search {
-    margin-left: 10%;
-    margin-right: 10%;
-}
 .search-container, .wikipedia {
     border-radius: 10px;
     padding: 10px;
@@ -84,6 +80,8 @@ a {
     margin-top: 10px;
     margin-bottom: 10px;
     color: var(--content-color);
+}
+.supra-content {
 }
 .container-title {
     font-size: 20px;
@@ -105,10 +103,32 @@ a {
     height: 120px;
 }
 @media screen and (max-width: 800px) {
+    .main-search {
+        margin-left: -20px;
+        display: block;
+    }
     .main-title {
         display: none;
-    } 
+    }
+    .inter {
+        width: 100%;
+    }
+    .search-input {
+        width: 85%;
+    }
 }
+
+@media screen and (max-width: 700px) {
+    .search-input {
+        width: 83%;
+    }
+}
+@media screen and (max-width: 600px) {
+    .search-input {
+        width: 82%;
+    }
+}
+
 @media screen and (max-width: 500px) {
     .inter-container {
         display: block;
@@ -117,9 +137,37 @@ a {
         margin-left: 0px;
         font-size: 30px;
     }
+    .search-input {
+        width: 78%;
+    }
+}
+@media screen and (max-width: 400px) {
+   .search-input {
+        width: 77%;
+    } 
+}
+@media screen and (max-width: 350px) {
+   .search-input {
+        width: 76%;
+    } 
 }
 @media screen and (min-width: 1200px) {
+    .inter {
+        width: 200%;
+    }
+    .search-input {
+        width: 85%;
+    }
     .send-button {
         margin: 0;
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    .inter {
+        width: 350%;
+    }
+    .search-input {
+        width: 90%;
     }
 }
