--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -39,7 +39,7 @@ body {
     height: 20px;
 }
 .search-input {
-    width: 80%;
+    width: 85%;
     transition: 0.3s ease-in-out;
     height: 60%;
     background: var(--content-color);
@@ -77,6 +77,10 @@ body {
 @media screen and (max-width: 700px) {
     .main-title {
         font-size: 50px;
+    }
+
+    .search-input {
+        width: 75%;
     }
 }
 @media screen and (max-width: 450px) {
