Fix wikipedia-img bug

--- a/app/static/style/search.css
+++ b/app/static/style/search.css
@@ -102,7 +102,8 @@ a {
 }
 .wiki-img {
     border-radius: 10px;
-    height: 120px;
+    height: 160px;
+    width: 160px;
 }
 @media screen and (max-width: 800px) {
     .main-search {
