--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -48,7 +48,7 @@
             </a>
             {% endfor %}
         </div>
-        <a href="{{next_url}}">NEXT</a>
+        <div class="search-container next-button"><a href="{{next_url}}" class="next-link">more</a></div>
     </div>
 </body>
 </html>
