div in link not link in div

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -48,7 +48,7 @@
             </a>
             {% endfor %}
         </div>
-        <div class="search-container next-button"><a href="{{next_url}}" class="next-link">more</a></div>
+        <a href="{{next_url}}" class="next-link"><div class="search-container next-button">more</div></a>
     </div>
 </body>
 </html>
