add opensearch link

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -8,7 +8,7 @@
         rel="search"
         type="application/opensearchdescription+xml"
         title="Cosmos"
-        href="{{ url_for('static', filename='opensearch.xml') }}" />
+        href="/static/opensearch.xml" />
         <meta name="description" content="Privacy friendly beautiful metasearch engine.">
         <meta name="keywords" content="Search Engine, Metasearch engine, privacy, search, cosmos">
         <meta name="author" content="Asterjdm">
