--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -21,10 +21,10 @@
             <h1 class="main-title">cosmosearch</h1>   
             <form method="get" action="/search/" class="searchForm"> 
                 <div class="inter">
-                    <img src="{{ url_for('static', filename='images/search.png') }}" alt="Search icon" class="search-img">
+                    <img src="/static/images/search.png" alt="Search icon" class="search-img">
                         <input name="query" type="text" class="search-input" placeholder="Enter text to search">
                     <button class="send-button" type="submit"> 
-                        <img src="{{ url_for('static', filename='images/send.png') }}" alt="Send icon" class="send-img">
+                        <img src="/static/images/send.png" alt="Send icon" class="send-img">
                     </button>
                 </div>
             </form>
