--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -22,7 +22,7 @@
             <form method="get" action="/search/" class="searchForm"> 
                 <div class="inter">
                     <img src="/static/images/search.png" alt="Search icon" class="search-img">
-                        <input name="query" type="text" class="search-input" placeholder="Enter text to search">
+                        <input name="q" type="text" class="search-input" placeholder="Enter text to search">
                     <button class="send-button" type="submit"> 
                         <img src="/static/images/send.png" alt="Send icon" class="send-img">
                     </button>
