more button is working

--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -38,7 +38,7 @@
             </a>
             {{end}}
         </div>
-        <a href="https://caca.fr" class="next-link"><div class="search-container next-button">more</div></a>
+        <a href="{{.NextPageUrl}}" class="next-link"><div class="search-container next-button">more</div></a>
     </div>
 </body>
 </html>
