--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -15,7 +15,7 @@
             <form method="get" action="/search/" class="searchForm"> 
                 <div class="inter">
                     <img src="/static/images/search.png" alt="Search icon" class="search-img">
-                        <input value="query" name="query" type="text" class="search-input" placeholder="Enter text to search">
+                        <input value="q" name="query" type="text" class="search-input" placeholder="Enter text to search">
                     <button class="send-button" type="submit"> 
                         <img src="/static/images/search.png" alt="Send icon" class="send-img">
                     </button>
