--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/static/style/search.css">
-	<title>{{Query}} - CosmosSearch</title>
+	<title>{{.Query}} - CosmosSearch</title>
 </head>
 <body>
 	<div class="main">
@@ -15,7 +15,7 @@
             <form method="get" action="/search/" class="searchForm"> 
                 <div class="inter">
                     <img src="/static/images/search.png" alt="Search icon" class="search-img">
-                        <input value="{{Query}}" name="q" type="text" class="search-input" placeholder="Enter text to search">
+                        <input value="{{.Query}}" name="q" type="text" class="search-input" placeholder="Enter text to search">
                     <button class="send-button" type="submit"> 
                         <img src="/static/images/search.png" alt="Send icon" class="send-img">
                     </button>
