added page title in the info section

--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -29,7 +29,7 @@
                         <div class="supra-content">
                             <div class="inter-container">
                                 <img src="" alt="" width="200" class="wiki-img">
-                                <h1 class="wikipedia-title">INFO</h1>
+                                <h1 class="wikipedia-title">{{index .Info "Title"}}</h1>
                             </div>
                             <p class="container-description">{{index .Info "Summary"}}</p>
                         </div>
