--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -23,7 +23,7 @@
             </form>
         </div>
         <div class="search">
-            <p>Result found in {{.SearchTime}} seconds !</p>
+            <p class="resultsTime">Result found in {{.SearchTime}} seconds !</p>
             {{if .FoundInfo}}
                 <a href="{{.Info.Link}}">
                     <div class="wikipedia">
